# shorty

./: Cargo.toml  rustfmt.toml
src/: api.rs  attribution.rs  auth.rs  db.rs  main.rs
