[package]
authors = ["Caleb Denio <cjdenio44@gmail.com>"]
edition = "2018"
name = "shorty"
version = "0.1.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
once_cell = "1"
r2d2 = "0.8"
redis = { version = "0.20", features = ["tokio-comp", "r2d2"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "c9d7b4f" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "c9d7b4f" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
